--- a/index.html
+++ b/index.html
@@ -212,28 +212,42 @@
     </section>
 
     <!-- PUBLICATIONS -->
-    <section id="publications">
-      <h2>Publications</h2>
-      <p class="subtle">
-        *Indicates equal contribution. Links to preprints and data/code will be added soon.
-      </p>
-      <ul>
-        <li>
-          Gupta, G., &amp; Roney, J. R. (2024). 
-          <em>[Title of your main voice paper]</em>. 
-          <span>Hormones and Behavior.</span>
-          <!-- Replace # with actual link -->
-          [<a href="#" target="_blank" rel="noopener">Publisher</a>] 
-          [<a href="#" target="_blank" rel="noopener">Preprint</a>]
-        </li>
-        <li>
-          Roney, J. R., Gupta, G., &amp; Mei, X. (2021).
-          <em>Progesterone</em>. In <em>Encyclopedia of Evolutionary Psychological Science</em>.
-          Springer.
-        </li>
-        <!-- Add more as needed -->
-      </ul>
-    </section>
+    <!-- PUBLICATIONS -->
+<section id="publications">
+  <h2>Publications</h2>
+  <p class="subtle">
+    Links to articles and preprints will be added soon.
+  </p>
+  <ul>
+    <li>
+      Nikhil, K. L., Goirik, G., Ratna, K., &amp; Sharma, V. K. (2014). 
+      <em>Role of temperature in mediating morning and evening emergence chronotypes in fruit flies Drosophila melanogaster.</em> 
+      <span>Journal of Biological Rhythms, 29(6), 427–441.</span>
+      <!-- [<a href="#" target="_blank" rel="noopener">Publisher</a>] -->
+    </li>
+
+    <li>
+      Roney, J. R., Gupta, G., &amp; Mei, M. (2021).
+      <em>Progesterone.</em> In <em>Encyclopedia of Sexuality and Gender</em> (pp. 1–7).
+      <!-- [<a href="#" target="_blank" rel="noopener">Publisher</a>] -->
+    </li>
+
+    <li>
+      Gupta, G., Simmons, Z. L., &amp; Roney, J. R. (2024).
+      <em>Hormonal and cycle phase predictors of within-women shifts in self-perceived attractiveness: Tests of alternative functional models.</em> 
+      <span>Hormones and Behavior, 164, 105602.</span>
+      <!-- [<a href="#" target="_blank" rel="noopener">Publisher</a>] -->
+      <!-- [<a href="#" target="_blank" rel="noopener">Preprint</a>] -->
+    </li>
+
+    <li>
+      Gupta, G. (2017).
+      <em>Characterizing activity-rest rhythms of three related ant species, and examining the effect of social interaction on sleep in Drosophila melanogaster.</em> 
+      <span>Jawaharlal Nehru Centre for Advanced Scientific Research.</span>
+      <!-- MSc dissertation/project report if you want to specify -->
+    </li>
+  </ul>
+</section>
 
     <!-- TEACHING -->
     <section id="teaching">
